@@ -1,2 +1,3 @@
 CHANGELOG
+2022-07-12 - Added $check, $st, $json,
 2022-05-25 - Added $active, $activate, $char, $list, $register, and $quote commands. Changed bot to only respond to $ (no !).
